Updates & fixes - css extracted to separate file - bootstrap loader config updated - xo config added

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-
+<html>
 <head>
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <p>Test</p>
-<button class="btn btn-danger">YOLO</button>
+    <button class="btn btn-danger">YOLO</button>
 </body>
 </html>
