prepared for clientside development

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="bundle.js"></script>
-    <link rel="stylesheet" href="style.css"/>
+    <!--css-->
+    <link rel="stylesheet" href="dist/style.css"/>
+
+    <!--js-->
+    <script src="dist/bundle.js"></script>
 </head>
-<body>
-    <p>Test</p>
-    <button class="btn btn-danger">YOLO</button>
+<body><button class="btn-danger btn">yolo</button>
 </body>
 </html>
