unfinished angular config

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
+    <title>Books</title>
     <!--css-->
     <link rel="stylesheet" href="dist/style.css"/>
 
     <!--js-->
     <script src="dist/bundle.js"></script>
 </head>
-<body><button class="btn-danger btn">yolo</button>
+<body>
+<div ui-view></div>
 </body>
 </html>
