--- a/apiSpec/apiSpec.html
+++ b/apiSpec/apiSpec.html
@@ -159,7 +159,7 @@
         "pages": 123,
         "isbn10": "1-234-56789-8",
         "isbn13": "1-234-56789-1234",
-        "amazonUrl": "testUrl",
+        "pageUrl": "testUrl",
         "imageUrl": "testImgUrl",
         "user": "55d705d439bd303c0f09b93e"
       }
@@ -200,7 +200,7 @@
       "pages": 123,
       "isbn10": "1-234-56789-8",
       "isbn13": "1-234-56789-1234",
-      "amazonUrl": "testUrl",
+      "pageUrl": "testUrl",
       "imageUrl": "testImgUrl",
       "user": "55d705d439bd303c0f09b93e"
     }
@@ -256,7 +256,7 @@
     "pages": 123,
     "isbn10": "1-234-56789-8",
     "isbn13": "1-234-56789-1234",
-    "amazonUrl": "testUrl",
+    "pageUrl": "testUrl",
     "imageUrl": "testImgUrl",
     "user": {
       "_id": "55d705d439bd303c0f09b93e",
@@ -275,7 +275,7 @@
     "pages": 123,
     "isbn10": "1-234-56789-8",
     "isbn13": "1-234-56789-1234",
-    "amazonUrl": "testUrl",
+    "pageUrl": "testUrl",
     "imageUrl": "testImgUrl",
     "user": {
       "_id": "55d705d439bd303c0f09b93e",
@@ -298,7 +298,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "token": { "type": "string"},
     "user": { "type": "string"}
@@ -311,7 +311,7 @@
   "pages": 123,
   "isbn10": "1-234-56789-8",
   "isbn13": "1-234-56789-1234",
-  "amazonUrl": "testUrl",
+  "pageUrl": "testUrl",
   "imageUrl": "testImgUrl",
   "user": "55d705d439bd303c0f09b93e"
 }
@@ -325,7 +325,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "user": { 
       "type": "object",
@@ -342,7 +342,7 @@
     "pages": 123,
     "isbn10": "1-234-56789-8",
     "isbn13": "1-234-56789-1234",
-    "amazonUrl": "testUrl",
+    "pageUrl": "testUrl",
     "imageUrl": "testImgUrl",
     "user": {
       "_id": "55d705d439bd303c0f09b93e",
@@ -361,7 +361,7 @@
     "pages": 123,
     "isbn10": "1-234-56789-8",
     "isbn13": "1-234-56789-1234",
-    "amazonUrl": "testUrl",
+    "pageUrl": "testUrl",
     "imageUrl": "testImgUrl",
     "user": {
       "_id": "55d705d439bd303c0f09b93e",
@@ -385,7 +385,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "user": { 
       "type": "object",
@@ -401,7 +401,7 @@
   "pages": 123,
   "isbn10": "1-234-56789-8",
   "isbn13": "1-234-56789-1234",
-  "amazonUrl": "testUrl",
+  "pageUrl": "testUrl",
   "imageUrl": "testImgUrl",
   "user": {
     "_id": "55d705d439bd303c0f09b93e",
@@ -424,7 +424,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "user": { "type": "string"}
   },
@@ -437,7 +437,7 @@
   "pages": 123,
   "isbn10": "1-234-56789-8",
   "isbn13": "1-234-56789-1234",
-  "amazonUrl": "testUrl",
+  "pageUrl": "testUrl",
   "imageUrl": "testImgUrl",
   "user": "55d705d439bd303c0f09b93e"
 }
@@ -451,7 +451,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "user": { 
       "type": "object",
@@ -467,7 +467,7 @@
   "pages": 123,
   "isbn10": "1-234-56789-8",
   "isbn13": "1-234-56789-1234",
-  "amazonUrl": "testUrl",
+  "pageUrl": "testUrl",
   "imageUrl": "testImgUrl",
   "user": {
     "_id": "55d705d439bd303c0f09b93e",
@@ -490,7 +490,7 @@
     "pages": { "type": "string"},
     "isbn10": { "type": "string"},
     "isbn13": { "type": "string"},
-    "amazonUrl": { "type": "string"},
+    "pageUrl": { "type": "string"},
     "imageUrl": { "type": "string"},
     "user": { "type": "string"}
   },
@@ -503,7 +503,7 @@
   "pages": 123,
   "isbn10": "1-234-56789-8",
   "isbn13": "1-234-56789-1234",
-  "amazonUrl": "testUrl",
+  "pageUrl": "testUrl",
   "imageUrl": "testImgUrl",
   "user": "55d705d439bd303c0f09b93e"
 } 
